[package]
name = "who"
version = "0.1.0"
edition = "2024"
description = "A Rust Authentication built with Axum"
license = "MIT"

[[bin]]
name = "who"
path = "src/main.rs"

[lib]
name = "who"
path = "src/lib.rs"

[dependencies]
axum = "0.8.9"
jsonwebtoken = { version = "10.3.0", default-features = false, features = [
    "rust_crypto",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
axum-test = "20.0.0"
tower = "0.5.3"

[profile.dev]
opt-level = 1

[profile.release]
strip = true
opt-level = "z"
overflow-checks = false
lto = "fat"
codegen-units = 1
panic = "abort"
